Fix overflowing JSON on start page map marker

--- a/client/pages/startpage/page-start.less
+++ b/client/pages/startpage/page-start.less
@@ -52,6 +52,7 @@
         .type-code;
         color: @color-sourcecode;
         white-space: pre;
+        overflow: hidden;
       }
     }
   }
